# Pi_Dog

./: .env.example  .gitignore  FEEDBACK.md  README.md  STATUS.md  project_overview.md  pyproject.toml  requirements.txt
.github/agents/: critic.agent.md  reviewer.agent.md  security.agent.md
.maestro/: agent_plan.md  critic_report.md  decisions.md  memory.md  task_plan.md  validation_report.md
.maestro/briefs/: 2026-07-01-after-planner.md  2026-07-02-progress.md  2026-07-04-after-first-build-merge.md  2026-07-04-before-closeout.md  2026-07-09-before-closeout.md
backlog/: README.md  data_sources.md  phases.md
backlog/tasks/: task-01-scaffold-repo.md  task-02-implement-config.md  task-03-action-schema.md  task-04-policy-layer.md  task-05-mock-robot.md  task-06-ollama-client.md  task-07-planner.md  task-08-cli-demo.md  task-09-pidog-adapter.md  task-10-voice-loop.md  task-10-voice-sensors.md  task-11-sensor-reactions.md  task-12-demo-polish.md
scripts/: benchmark_pi.py  setup_pi.sh
src/pidog_brain/: config.py  main.py
src/pidog_brain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pidog_brain/llm/: __init__.py  base.py  llama_cpp_client.py  ollama_client.py
src/pidog_brain/planner/: __init__.py  parser.py  policy.py  prompts.py  router.py  schema.py
src/pidog_brain/robot/: actions.py  base.py  mock_robot.py
tests/: test_action_schema.py  test_config.py  test_main.py  test_mock_robot.py  test_ollama_client.py  test_planner.py  test_planner_runtime.py  test_policy.py  test_router.py
(+2 files in other folders)
