[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pidog-brain"
version = "0.1.0"
description = "Local LLM brain for SunFounder PiDog V2 robot dog"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
optional-dependencies = { llama = ["llama-cpp-python>=0.2"] }

[project.scripts]
pidog-brain = "pidog_brain.main:main"

[tool.setuptools.packages.find]
where = ["src"]
